--- a/app/src/main/res/layout/signup_fragment.xml
+++ b/app/src/main/res/layout/signup_fragment.xml
@@ -1,96 +1,81 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:padding="10dp"
     android:gravity="center"
-    android:orientation="vertical">
+    tools:context=".Fragment.SignupFragment">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="30dp"
-        android:fontFamily="@font/baumans"
-        android:text="Rm Blog App"
-        android:textSize="25sp" />
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/emailsLayout"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp">
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:orientation="vertical">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="30dp"
+            android:fontFamily="@font/baumans"
+            android:text="Rm Blog App"
+            android:textSize="25sp" />
+
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/emails"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="#00000000"
             android:fontFamily="@font/baumans"
             android:hint="Email"
-            android:inputType="textEmailAddress" />
-
-    </com.google.android.material.textfield.TextInputLayout>
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/passwordsLayout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        app:passwordToggleEnabled="true">
+            android:inputType="textEmailAddress"
+            android:padding="15dp" />
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/passwords"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="#00000000"
             android:fontFamily="@font/baumans"
             android:hint="Password"
-            android:inputType="textPassword" />
-
-    </com.google.android.material.textfield.TextInputLayout>
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/cPasswordsLayout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        app:passwordToggleEnabled="true">
+            android:inputType="textPassword"
+            android:padding="10dp" />
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/cPasswords"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="#00000000"
             android:fontFamily="@font/baumans"
             android:hint="Confirm Password"
-            android:inputType="textPassword" />
+            android:inputType="textPassword"
+            android:padding="10dp" />
 
-    </com.google.android.material.textfield.TextInputLayout>
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp">
-
-        <Button
-            android:id="@+id/logins"
-            android:layout_width="wrap_content"
+        <RelativeLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:backgroundTint="@color/colorLightGrey"
-            android:fontFamily="@font/baumans"
-            android:text="Login"
-            android:textAllCaps="false" />
+            android:layout_margin="10dp">
 
-        <Button
-            android:id="@+id/signups"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:fontFamily="@font/baumans"
-            android:text="Signup"
-            android:textAllCaps="false" />
+            <Button
+                android:id="@+id/logins"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:backgroundTint="@color/colorLightGrey"
+                android:fontFamily="@font/baumans"
+                android:text="Login"
+                android:textAllCaps="false" />
 
-    </RelativeLayout>
+            <Button
+                android:id="@+id/signups"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:fontFamily="@font/baumans"
+                android:text="Signup"
+                android:textAllCaps="false" />
 
-</LinearLayout>
+        </RelativeLayout>
+
+    </LinearLayout>
+
+</ScrollView>
