--- a/app/src/main/res/layout/layout_post.xml
+++ b/app/src/main/res/layout/layout_post.xml
@@ -7,7 +7,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical">
 
         <LinearLayout
@@ -45,7 +45,7 @@
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/baumans"
                     android:text="30 December 2022"
-                    android:textColor="@color/colorGrey"
+                    android:textColor="@color/colorLightGrey"
                     android:textSize="12sp" />
 
             </LinearLayout>
@@ -53,6 +53,7 @@
             <ImageButton
                 android:id="@+id/postOption"
                 android:layout_width="wrap_content"
+                android:tooltipText="Post Option"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:background="@android:color/transparent"
@@ -91,6 +92,7 @@
             <ImageButton
                 android:id="@+id/postLike"
                 android:layout_width="wrap_content"
+                android:tooltipText="Post Like"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:layout_marginRight="12dp"
@@ -101,6 +103,7 @@
                 android:id="@+id/postComment"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:tooltipText="Post Comment"
                 android:layout_gravity="center_vertical"
                 android:layout_marginRight="12dp"
                 android:background="@android:color/transparent"
