--- a/app/src/main/res/layout/activity_edit_post.xml
+++ b/app/src/main/res/layout/activity_edit_post.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".AddPost">
+    tools:context=".EditPost">
 
     <com.google.android.material.appbar.MaterialToolbar
         android:layout_width="match_parent"
@@ -15,10 +15,10 @@
 
         <ImageButton
             android:id="@+id/backHome"
-            android:onClick="goBack"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginRight="12dp"
+            android:onClick="goBack"
             android:background="@android:color/transparent"
             android:src="@drawable/ic_back_arrow"
             app:tint="@color/black" />
@@ -26,7 +26,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="New Post"
+            android:text="Edit Post"
             android:textColor="@color/black"
             android:textSize="18sp" />
 
@@ -43,43 +43,25 @@
             android:orientation="vertical"
             android:padding="16dp">
 
-            <ImageView
-                android:id="@+id/postAddImg"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="16dp"
-                android:adjustViewBounds="true" />
-
-            <TextView
-                android:id="@+id/postChangeImg"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:padding="10dp"
-                android:text="Change Image"
-                android:textAlignment="center"
-                android:textColor="@color/colorPrimary"
-                android:textStyle="bold" />
-
             <EditText
-                android:id="@+id/postDesc"
+                android:id="@+id/editDesc"
                 android:layout_width="match_parent"
                 android:layout_height="150dp"
-                android:padding="10dp"
                 android:layout_marginTop="10dp"
                 android:background="@drawable/text_back"
                 android:gravity="left"
                 android:inputType="textMultiLine"
+                android:padding="10dp"
                 android:textSize="15sp" />
 
             <Button
-                android:id="@+id/post"
+                android:id="@+id/editPost"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:background="@color/colorPrimary"
                 android:padding="0dp"
-                android:text="Post"
+                android:text="Update Post"
                 android:textAllCaps="false"
                 android:textColor="@color/colorWhite"
                 android:textSize="15sp" />
