--- a/app/src/main/res/layout/activity_comment.xml
+++ b/app/src/main/res/layout/activity_comment.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".CommentActivity">
+    tools:context=".Activity.CommentActivity">
 
     <com.google.android.material.appbar.MaterialToolbar
         android:layout_width="match_parent"
@@ -48,15 +48,6 @@
         android:background="@drawable/comment_rect"
         android:orientation="horizontal">
 
-        <ImageButton
-            android:id="@+id/cancelComment"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="4dp"
-            android:background="@android:color/transparent"
-            android:src="@drawable/ic_close"
-            app:tint="@color/black" />
-
         <EditText
             android:id="@+id/comment"
             android:layout_width="0dp"
@@ -65,6 +56,8 @@
             android:padding="5dp"
             android:layout_weight="1"
             android:hint="Write something..."
+            android:layout_marginLeft="5dp"
+            android:lineHeight="25dp"
             android:inputType="textMultiLine"
             android:textSize="16sp" />
 
@@ -78,6 +71,5 @@
             app:tint="@color/black" />
 
     </LinearLayout>
-
 
 </RelativeLayout>
