--- a/app/src/main/res/layout/activity_on_board.xml
+++ b/app/src/main/res/layout/activity_on_board.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".OnBoardActivity">
+    tools:context=".Activity.OnBoardActivity">
 
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/viewPager"
