--- a/app/src/main/res/layout/activity_edit_user.xml
+++ b/app/src/main/res/layout/activity_edit_user.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     tools:context=".Activity.EditUserActivity">
 
@@ -18,8 +18,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginRight="12dp"
-            android:onClick="goBack"
             android:background="@android:color/transparent"
+            android:onClick="goBack"
             android:src="@drawable/ic_back_arrow"
             app:tint="@color/black" />
 
@@ -56,6 +56,18 @@
             android:text="Choose photo..."
             android:textAlignment="center"
             android:textColor="@color/colorPrimary"
+            android:textSize="16sp" />
+
+
+        <TextView
+            android:id="@+id/editEmail"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:fontFamily="@font/baumans"
+            android:padding="10dp"
+            android:text="Choose photo..."
+            android:textColor="@color/colorGrey"
             android:textSize="16sp" />
 
         <com.google.android.material.textfield.TextInputEditText
